fixedJava21JenkinsfileIssue